--- a/DemoWeb/vueDemo/02-v-mode双向绑定.html
+++ b/DemoWeb/vueDemo/02-v-mode双向绑定.html
@@ -10,14 +10,22 @@
 
 <body>
     <div id="app">
+        <input type="text" v-bind:value="searchMap.keyWord"/>
+        <input type="text" v-model:value="searchMap.keyWord"/>
 
+        <p>{{searchMap.keyWord}}</p>
+ 
     </div>
     <script src="vue.min.js"></script>
     <script>
         new Vue({
             el: '#app',
             data: {
-                
+                searchMap:{
+                    keyWord:'尚硅谷'
+
+                }
+
             }
         })
     </script>
